added functionality and additonal routes

--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -1,2 +1,5 @@
 header
-  h1 HELLO!
+  h1(style="text-align:center;") Hari OM, may I has URL?
+  nav(style="display:flex; justify-content:space-around")
+    a(href="/urls") Home
+    a(href="/urls/new") New URL
