big push, added more routes, cookies, README, and starting styling

--- a/views/partials/_head.pug
+++ b/views/partials/_head.pug
@@ -1,2 +1,7 @@
-head
-  title TinyApp
+//-partials/head this doesn't seem to want to work properly, leaving for now
+html
+  head
+    title TinyApp
+    link(rel='stylesheet', href='../css/styles.css', type='text/css')
+    body
+      include _header
