--- a/views/urls_new.pug
+++ b/views/urls_new.pug
@@ -1,10 +1,11 @@
 html
   head
     title TinyApp
-  body(style='font-size:20px; padding:50px;')
+  body
     include partials/_header
-    form(action='/urls' method='POST' style="margin: 150px")
-      label(for='longURL') Enter a URL:
-      input(id='longURL' type='text' name='longURL' placeholder='http://' style='width: 300px')
-      input(type='submit' value='submit')
+    div(style="width:100%; display: flex; flex-direction:column; align-items: center; margin-top: 3em;")
+      form(action='/urls' method='POST')
+        label(for='longURL') Enter a URL:
+        input(id='longURL' type='text' name='longURL' placeholder='Please enter full URL (http://...)' style='width: 300px')
+        input(type='submit' value='submit')
 
